--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,26 +52,6 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="10dp" />
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/speechbubble"
-        android:id="@+id/imageView"
-        android:layout_marginTop="21dp"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="32sp"
-        android:text="Preventing Unwanted Social Harassment"
-        android:id="@+id/textView"
-        android:gravity="center"
-        android:layout_marginTop="68dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,4 +62,23 @@
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:src="@drawable/speechbubble"
+        android:id="@+id/imageView"
+        android:layout_marginBottom="38dp"
+        android:layout_above="@+id/groupButton"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="32sp"
+        android:text="Preventing Unwanted Social Harassment"
+        android:id="@+id/textView"
+        android:gravity="center"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
